logs/evariste.log
Listing '.'...
Listing './bin'...
Compiling './bin/rst2html.py'...
Compiling './bin/rst2html4.py'...
Compiling './bin/rst2html5.py'...
Compiling './bin/rst2latex.py'...
Compiling './bin/rst2man.py'...
Compiling './bin/rst2odt.py'...
Compiling './bin/rst2odt_prepstyles.py'...
Compiling './bin/rst2pseudoxml.py'...
Compiling './bin/rst2s5.py'...
Compiling './bin/rst2xetex.py'...
Compiling './bin/rst2xml.py'...
Compiling './bin/rstpep2html.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Evariste-0.2.2.dist-info'...
Listing './lib/python3.5/site-packages/GitPython-2.1.8.dist-info'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/Markdown-2.6.11.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/Unidecode-1.0.22.dist-info'...
Listing './lib/python3.5/site-packages/argdispatch'...
Listing './lib/python3.5/site-packages/argdispatch-0.2.0.dist-info'...
Listing './lib/python3.5/site-packages/docutils'...
Listing './lib/python3.5/site-packages/docutils/languages'...
Listing './lib/python3.5/site-packages/docutils/parsers'...
Listing './lib/python3.5/site-packages/docutils/parsers/rst'...
Listing './lib/python3.5/site-packages/docutils/parsers/rst/directives'...
Listing './lib/python3.5/site-packages/docutils/parsers/rst/include'...
Listing './lib/python3.5/site-packages/docutils/parsers/rst/languages'...
Listing './lib/python3.5/site-packages/docutils/readers'...
Listing './lib/python3.5/site-packages/docutils/transforms'...
Listing './lib/python3.5/site-packages/docutils/utils'...
Listing './lib/python3.5/site-packages/docutils/utils/math'...
Listing './lib/python3.5/site-packages/docutils/writers'...
Listing './lib/python3.5/site-packages/docutils/writers/html4css1'...
Listing './lib/python3.5/site-packages/docutils/writers/html5_polyglot'...
Listing './lib/python3.5/site-packages/docutils/writers/latex2e'...
Listing './lib/python3.5/site-packages/docutils/writers/odf_odt'...
Listing './lib/python3.5/site-packages/docutils/writers/pep_html'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes/big-black'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes/big-white'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes/default'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes/medium-black'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes/medium-white'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes/small-black'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes/small-white'...
Listing './lib/python3.5/site-packages/docutils/writers/xetex'...
Listing './lib/python3.5/site-packages/docutils-0.14.dist-info'...
Listing './lib/python3.5/site-packages/evariste'...
Listing './lib/python3.5/site-packages/evariste/evs'...
Listing './lib/python3.5/site-packages/evariste/evs/cache'...
Listing './lib/python3.5/site-packages/evariste/evs/compile'...
Listing './lib/python3.5/site-packages/evariste/plugins'...
Listing './lib/python3.5/site-packages/evariste/plugins/action'...
Listing './lib/python3.5/site-packages/evariste/plugins/renderer'...
Listing './lib/python3.5/site-packages/evariste/plugins/renderer/html'...
Listing './lib/python3.5/site-packages/evariste/plugins/renderer/html/data'...
Listing './lib/python3.5/site-packages/evariste/plugins/renderer/html/data/templates'...
Listing './lib/python3.5/site-packages/evariste/plugins/renderer/html/readme'...
Listing './lib/python3.5/site-packages/evariste/plugins/renderer/html/target'...
Listing './lib/python3.5/site-packages/evariste/plugins/renderer/htmlbox'...
Listing './lib/python3.5/site-packages/evariste/plugins/renderer/htmlbox/data'...
Listing './lib/python3.5/site-packages/evariste/plugins/renderer/htmlbox/data/static'...
Listing './lib/python3.5/site-packages/evariste/plugins/renderer/htmlbox/data/templates'...
Listing './lib/python3.5/site-packages/evariste/plugins/renderer/htmlplus'...
Listing './lib/python3.5/site-packages/evariste/plugins/renderer/htmlplus/data'...
Listing './lib/python3.5/site-packages/evariste/plugins/renderer/htmlplus/data/static'...
Listing './lib/python3.5/site-packages/evariste/plugins/renderer/htmlplus/data/templates'...
Listing './lib/python3.5/site-packages/evariste/plugins/renderer/jinja2'...
Listing './lib/python3.5/site-packages/evariste/plugins/vcs'...
Listing './lib/python3.5/site-packages/git'...
Listing './lib/python3.5/site-packages/git/index'...
Listing './lib/python3.5/site-packages/git/objects'...
Listing './lib/python3.5/site-packages/git/objects/submodule'...
Listing './lib/python3.5/site-packages/git/refs'...
Listing './lib/python3.5/site-packages/git/repo'...
Listing './lib/python3.5/site-packages/git/test'...
Listing './lib/python3.5/site-packages/git/test/fixtures'...
Listing './lib/python3.5/site-packages/git/test/lib'...
Listing './lib/python3.5/site-packages/git/test/performance'...
Listing './lib/python3.5/site-packages/gitdb'...
Listing './lib/python3.5/site-packages/gitdb/db'...
Listing './lib/python3.5/site-packages/gitdb/test'...
Listing './lib/python3.5/site-packages/gitdb/utils'...
Listing './lib/python3.5/site-packages/gitdb2-2.0.3.dist-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markdown'...
Listing './lib/python3.5/site-packages/markdown/extensions'...
Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/smmap'...
Listing './lib/python3.5/site-packages/smmap/test'...
Listing './lib/python3.5/site-packages/smmap2-2.0.3.dist-info'...
Listing './lib/python3.5/site-packages/unidecode'...
Listing './share'...
Listing './share/python-wheels'...
